# ResearchVault

./: README.md
Backend/: CLAUDE.md  README.md  pyproject.toml
Backend/app/: database.py  main.py
Backend/app/models/: paper.py
Backend/app/routes/: ask.py  compare.py  ingest.py  papers.py  upload.py
Backend/app/services/: claude_service.py  embeddings.py  pdf_service.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/datasets/: page.tsx
frontend/app/papers/[id]/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: PaperCard.tsx  Sidebar.tsx
frontend/lib/: api.ts
